--- a/medeniyetler.html
+++ b/medeniyetler.html
@@ -10,7 +10,7 @@
         <center><b>Medeniyetler: Geçmişin İzinde, Geleceğin Işığında</b></center>
     </h1>
 
-    <a href="file:///C:/Users/HP/Documents/wep%20tasar%C4%B1m/tarih%20sitesi/index.html" target="_blank"
+    <a href="index.html" target="_blank"
         style="display: inline-block; padding: 10px 20px; background-color: #007bff; color: white; text-decoration: none; border-radius: 5px;">ANA
         SAYFA</a>
     <hr>
